2001-09-27  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (Field.GetDescription): Update docstring.
	(Field.GetBriefDescription): New method.
	* qm/structured_text.py (StructuredTextProcessor.__call__): Use
	get_paragraphs.
	(get_paragraphs): New function.
	(get_first_paragraph): Likewise.
	(__paragraph_regexp): New variable.
	* qm/test/web/show.py (ShowPage.GetBriefClassDescription): New
	method.
	* share/dtml/test/new.dtml: Correct typo.
	* share/dtml/test/show.dtml: Reduce verbosity; reoder some 
	comments.
	
	* qm/test/classes/command.py (ExecTest): Revise doc strings.
	(ShellCommandTest): Likewise.
	(ShellScriptTest): Likewise.
	* qm/test/classes/file.py (SubstitutionField): Likewise.
	(FileContentsTest): Likewise.
	* qm/test/classes/python.py (ExecTest): Likewise.
	(ExceptionTest): Likewise.
	(StringExceptionTest): Likewise.

2001-09-27  Alex Samuel  <samuel@codesourcery.com>

	* qm/common.py (wrap_lines): Add indent parameter.
	* qm/test/cmdline.py (Command.summary_formats): New attribute.
	(Command.summary_option_spec): Remove.
	(Command.no_summary_option_spec): Likewise.
	(Command.conflicting_option_specs): Remove them.
	(Command.format_option_spec): New attribute.
	(Command.comamnds_spec): Add "summarize".  Adjust.
	(Command.Execute): Handle summarize.
	(Command.__ExecuteSummarize): New method.
	(Command.__ExecuteRun): Open results file later.  Adjust for
	__SummarizeResults.
	(Command.__WriteSummary): Remove.
	(Command.__SummarizeResults): New method.
	* qm/test/base.py (load_outcomes): Adjust for load_results.
	(read_results): Remove.
	(load_results): Return resource results too.
	(_results_from_dom): Remove.
	(_test_results_from_dom): New function.
	(_resource_results_from_dom): Likewise.
	(_result_from_dom): Adjust.
	(_count_outcomes): New function.
	(split_results_by_expected_outcomes): Likewise.
	(summarize_test_stats): Likewise.
	(summarize_relative_test_stats): Likewise.
	(summarize_test_suite_stats): Likewise.